@@ -5,6 +5,10 @@ Bug Fixes
 - After a fresh install it is possible to get a NPE when loading the first
   project. Now fixed.
 - Fixed :class and :find. These were also broken by the focus fix in 0.7.2.
+- Fixed * and # commands on one letter words.
+- Fixed * and # commands on last word of line with trailing punctuation.
+- Fixed b and e commands when trying to move to first or last word of file and
+  the first or last character of the file was punctuation.
 
 0.8.2 from 0.8.1
 - Fixed typo in plugin.xml for new 'since-build'
